[package]
name = "my_rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-extra = "0.8"  # ✅ No features needed
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jsonwebtoken = "9.3.1"
headers = "0.4.0"
